tests/neg/emptyCatch.scala
object Test {
  try {} catch {} // error: `catch` block does not contain a valid expression, try adding a case like - `case e: Exception =>` to the block
}
